[tool.poetry]
name = "calmal"
version = "0.1.0"
description = "Unsupervised ML for malware clustering"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-restful = "^0.3.10"
requests = "^2.31.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
kneed = "^0.8.5"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
